2004-09-17  Bruno Haible  <bruno@clisp.org>

	* clos-class3.lisp (define-structure-class): No need to fmakunbound.

2004-09-17  Bruno Haible  <bruno@clisp.org>

	Treat (FUNCTION NIL) correctly.
	* cmacros.lisp (function-form-funform): Remove function.
	(function-form-p): New function.
	(simple-function-form-p): Update.
	* compiler.lisp (inline-callable-function-lambda-p,
	inline-callable-function-p): Update.
	* loop.lisp (expand-loop): Update. Optimize #'(setf foo) the same way
	as #'foo.

2004-09-20  Sam Steingold  <sds@gnu.org>

	* pathname.d (PARSE-NAMESTRING): fix second return value for
	displaced arguments

2004-09-20  Sam Steingold  <sds@gnu.org>

	* describe.lisp (describe-object): print pathname components as
	is, not as pathnames with only this component, because :VERSION is
	never printed for non-logical pathnames and :NEWEST is thus
	printed as an empty string, which is confusing

2004-09-18  Bruno Haible  <bruno@clisp.org>

	* utils/clispload.lsp (*expected-failures*): Revisit many failures.

2004-09-17  Bruno Haible  <bruno@clisp.org>

	* clx/mit-clx/dependent.lisp (get-host-name): Implement correctly
	for clisp.

	* clx/mit-clx/dependent.lisp (conditional-store): Rewrite to avoid
	multiple evaluation of subforms.

	* clx/mit-clx/depdefs.lisp: Ensure that :CLX-LITTLE-ENDIAN is
	declared in *features* on little-endian platforms.

2004-09-18  Bruno Haible  <bruno@clisp.org>

	* clos-class3.lisp (compute-slots-<slotted-class>-around,
	create-shared-slots-vector): Fix bug in 2004-09-12 patch.

2004-09-17  Bruno Haible  <bruno@clisp.org>

	* condition.lisp (print-object@condition): Fix typo in 2004-09-14
	patch.

2004-09-17  Bruno Haible  <bruno@clisp.org>

	* condition.lisp (define-condition, handler-case, restart-bind): Pass
	both :FORM and :DETAIL when signalling a source-program-error.

2004-09-17  Bruno Haible  <bruno@clisp.org>

	* constsym.d (CUSTOM:*DEFUN-ACCEPT-SPECIALIZED-LAMBDA-LIST*,
	SYS::SPECIALIZED-LAMBDA-LIST-TO-ORDINARY): Align C names.